Bug 418857 - Finished game on records list have different time then displayed on status bar
Summary: Finished game on records list have different time then displayed on status bar
Status: RESOLVED FIXED
Alias: None
Product: picmi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jakob Linke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-14 21:13 UTC by slodki
Modified: 2022-01-23 11:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot showing time difference (32.63 KB, image/png)
2020-03-14 21:13 UTC, slodki
Details

Note You need to log in before you can comment on or make changes to this bug.
Description slodki 2020-03-14 21:13:44 UTC
Created attachment 126793 [details]
screenshot showing time difference

Finished game on records list have different time then displayed on status bar

STEPS TO REPRODUCE
1. Start new game
2. Solve the puzzle very quickly ;-)
3. Records list is displayed as pop-up with finished game added (bold)

OBSERVED RESULT
Solution time on records list is different then displayed at status bar

EXPECTED RESULT
Solution time on records list should be the same as displayed at status bar

SOFTWARE/OS VERSIONS
Linux: Kubuntu 19.10
Ubuntu package: 4:19.04.3-0ubuntu1
KDE Frameworks Version: 5.62.0
Qt Version: 5.12.4

ADDITIONAL INFORMATION
see attached screenshot
Comment 1 Jakob Linke 2020-04-10 07:19:01 UTC
Interesting.. Did you notice this just once or is it happening regularly?
Comment 2 Bug Janitor Service 2022-01-23 10:59:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/games/picmi/-/merge_requests/3
Comment 3 Martin Walch 2022-01-23 11:32:20 UTC
Git commit bf6959672292c72f1847393625c8465c5c591aaf by Martin Walch.
Committed on 23/01/2022 at 10:42.
Pushed by aacid into branch 'master'.

Refresh stale time display in the status bar at end of game

A timer periodically triggers updates of the time display in the status bar.
The timer stops at the end of the game without updating the status bar for a
last time, leaving a potentially stale time display.

Fix it by explicitly updating the status bar after stopping the timer.

M  +1    -0    src/gui/mainwindow.cpp

https://invent.kde.org/games/picmi/commit/bf6959672292c72f1847393625c8465c5c591aaf