Refresh stale time display in the status bar at end of game

A timer periodically triggers updates of the time display in the status bar.
The timer stops at the end of the game without updating the status bar for a
last time, leaving a potentially stale time display.

Fix it by explicitly updating the status bar after stopping the timer.

BUG: 418857